[package]
name = "wrapping_coords2d"
version = "0.1.0" # remember to update html_root_url
authors = ["Fabio A. Correa Duran <facorread@gmail.com>"]
categories = ["caching", "memory-management"]
description = "Translate between 1D indices and 2D coordinates with wrapping"
edition = "2018"
exclude = [
    ".github/*",
    ".gitlab*",
]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/facorread/WrappingCoords2d"
keywords = ["index", "indices", "2d", "coordinates", "matrix"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
